Release 0.9.9: snapshot APIs, rule embeds, sans-IO registries
Sans-IO registry protocol with host-owned HTTP; SDK install across
npm/Maven/Hex. Engine binary snapshot (Rust + SDKs). Rule embeds as
evaluation boundaries; missing_data ordered by eval tree. Java sealed
RuleResult, native cache, schema package. Scoped replanning, unqualified
imported types, inline i128 rational fast path. Fix linear rule-chain
stack overflow. Many more small performance improvements that add up.